🐛 Fixed Background Clipping on Mobile

--- a/styles/components/_background.scss
+++ b/styles/components/_background.scss
@@ -1,14 +1,18 @@
-.wrapper {
+body {
+  background-color: $background;
+
+  .wrapper {
   width: 100%;
+  height: 100vh;
   z-index: -1;
   background-color: $background;
 
   @include responsive(T) {
     @include flexbox;
-    height: 100vh;
     
     .wrapper-box {
       width: 100%;
     }
+   }
   }
 }
